feat(attendance): clear att task
